@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rcode_depth.1,v 1.5 2022/03/15 04:41:45 greg Exp $"
+.\" RCSid "$Id: rcode_depth.1,v 1.6 2025/06/04 20:32:24 greg Exp $"
 .TH RCODE_DEPTH 1 7/19/2019 RADIANCE
 .SH NAME
 rcode_depth - encode/decode 16-bit depth map
@@ -149,4 +149,4 @@ ximage -op render.hdr | rcode_depth -i -p first.dpt
 Greg Ward
 .SH "SEE ALSO"
 rcalc(1), rcode_ident(1), rcode_norm(1), rcode2bmp(1),
-rcrop(1), rlam(1), rsplit(1), rtpict(1)
+rcrop(1), rlam(1), rsplit(1), rtpict(1), rxpiece(1)
