@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rpict.1,v 1.32 2025/04/23 15:09:03 greg Exp $"
+.\" RCSid "$Id: rpict.1,v 1.33 2025/06/04 20:32:24 greg Exp $"
 .TH RPICT 1 2/26/99 RADIANCE
 .SH NAME
 rpict - generate a RADIANCE picture
@@ -966,4 +966,4 @@ option.
 Greg Ward
 .SH "SEE ALSO"
 getinfo(1), lookamb(1), mkpmap(1), oconv(1), pdfblur(1), pfilt(1), 
-pinterp(1), pmblur(1), printf(3), ra_rgbe(1), rad(1), rpiece(1), rtpict(1), rtrace(1), rvu(1)
+pinterp(1), pmblur(1), printf(3), ra_rgbe(1), rad(1), rpiece(1), rtpict(1), rtrace(1), rvu(1), rxpiece(1)
