@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rpiece.1,v 1.4 2018/03/20 02:40:38 greg Exp $"
+.\" RCSid "$Id: rpiece.1,v 1.5 2025/06/04 20:32:24 greg Exp $"
 .TH RPIECE 1 10/1/98 RADIANCE
 .SH NAME
 rpiece - render pieces of a RADIANCE picture
@@ -40,7 +40,7 @@ This is useful for running multiple
 processes on cooperating machines to render a single picture,
 which is a shared file specified with the
 .I \-o
-option.
+argument.
 The overall picture dimensions will be
 .I xres
 by
@@ -224,4 +224,4 @@ back to normal rendering.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-getinfo(1), pfilt(1), ra_rgbe(1), rpict(1), rtpict(1), ximage(1)
+getinfo(1), pfilt(1), ra_rgbe(1), rpict(1), rtpict(1), rxpiece(1), ximage(1)
