@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rtpict.1,v 1.15 2023/12/12 17:18:27 greg Exp $"
+.\" RCSid "$Id: rtpict.1,v 1.16 2025/06/04 20:32:24 greg Exp $"
 .TH RTPICT 1 3/19/2018 RADIANCE
 .SH NAME
 rtpict - generate a RADIANCE picture, hyperspectral image, or layers using rtrace
@@ -137,4 +137,4 @@ Greg Ward
 getinfo(1), mkpmap(1), oconv(1), pfilt(1), 
 pvalue(1), rad(1), rcode_depth(1), rcode_norm(1), rcode_ident(1),
 rcomb(1), rcrop(1), rmtxop(1),
-rpiece(1), rpict(1), rsplit(1), rtrace(1), rvu(1), vwrays(1)
+rpiece(1), rpict(1), rsplit(1), rtrace(1), rvu(1), rxpiece(1), vwrays(1)
